@@ -17,6 +17,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #24631: Fixed regression in the timeit modulu with multyline setup.
+
 - Issue #18622: unittest.mock.mock_open().reset_mock would recurse infinitely.
   Patch from Nicola Palumbo and Laurent De Buyst.
 
